fix /data mount for tool

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
         command: ["sh", "/wait-for", "db:3306", "--", "sh", "load-data.sh"]
 
         volumes:
-            - ./ontonotes-release-5.0:/data
+            - ./ontonotes-release-5.0/data/files/:/data
             - ./ontonotes-release-5.0/tools/ontonotes-db-tool-v0.999b:/tool
               # will write "yes" to /db/onto_py_init if tool build sucessfully. `db-tool/load-data.sh` will use this file to judge whether mysql schema initial is needed.
             - db-data:/db
